# VES_CODE

TFM_nietoschoebel/: .cproject  .project
TFM_nietoschoebel/main/: .cproject  CMakeLists.txt  deviceConfig.h  main.c
TFM_nietoschoebel/main/drivers/components/inc/bhi360/: bhi360.h.old  bhy2_defs.h  common.h  quaternion.h
TFM_nietoschoebel/main/drivers/components/inc/drv2605l/: drv2605L.h  drv2605LDefs.h  drv2605L_Actuators.h
TFM_nietoschoebel/main/drivers/components/inc/lsm6dso/: lsm6dso_mine.h.old
TFM_nietoschoebel/main/drivers/components/inc/w25n01gv/: w25n01gv.h
TFM_nietoschoebel/main/drivers/components/src/bhi360/: bhy2_hif.c  common.c  quaternion.c
TFM_nietoschoebel/main/drivers/components/src/drv2605l/: drv2605L.c  drv2605L_Actuators.c
TFM_nietoschoebel/main/drivers/components/src/lsm6dso/: lsm6dso_mine.c.old  lsm6dso_reg.c
TFM_nietoschoebel/main/drivers/components/src/w25n01gv/: w25n01gv.c
TFM_nietoschoebel/main/drivers/inc/: esp32-i2cDriver.h  esp32-spiDriver.h
TFM_nietoschoebel/main/drivers/src/: esp32-i2cDriver.c  esp32-spiDriver.c
TFM_nietoschoebel/main/inc/: bsp.h  commonTypes.h  quatOps.h  vector.h
TFM_nietoschoebel/main/src/: bsp.c
ves_wristband/: .cproject  .project  custom_partitions.csv  sdkconfig  sdkconfig.old
ves_wristband/main/: .cproject  .project  CMakeLists.txt  deviceConfig.h  main.c
ves_wristband/main/communications/inc/application/: moCapManager.h  networkManager.h  virtualScenarioElements.h  virtualScenarioManager.h
ves_wristband/main/communications/inc/transport/: transportLayer.h  wifiAP.h  wifiManager.h
ves_wristband/main/communications/src/: wifiManager.c
ves_wristband/main/communications/src/application/: moCapManager.c  networkManager.c  virtualScenarioManager.c
ves_wristband/main/communications/src/transport/: transportLayer.c
ves_wristband/main/drivers/components/inc/bhi360/: quaternion.h
ves_wristband/main/drivers/components/inc/drv2605l/: drv2605L_Const.h  drv2605L_ROMEffects.h  drv2605L_RegisterFile.h  periph_drivers.h
ves_wristband/main/drivers/components/inc/lsm6dso/: lsm6dso_reg.h  lsm6dso_util.h
ves_wristband/main/drivers/components/src/bhi360/: common.c  quaternion.c
ves_wristband/main/drivers/components/src/drv2605l/: drv2605L.c
ves_wristband/main/drivers/components/src/lsm6dso/: lsm6dso_reg.c  lsm6dso_util.c
ves_wristband/main/drivers/components/src/w25n01gv/: w25n01gv.c
ves_wristband/main/drivers/src/: esp32-i2cDriver.c  esp32-spiDriver.c
ves_wristband/main/inc/: batteryMonitor.h  bsp.h  commonTypes.h  genList.h  haptics.h  moCap.h  nvsManager.h  proximity.h
ves_wristband/main/src/: batteryMonitor.c  bsp.c  genList.c  haptics.c  moCap.c  nvsManager.c  proximity.c  quatOps.c  vector.c
